# mark2pdf

./: Cargo.toml  README.md
examples/: basic.rs  input.md
src/: config.rs  error.rs  lib.rs
src/core/: markdown.rs  pdf.rs
