[package]
name = "mark2pdf"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A fast Markdown to PDF converter written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/mark2pdf"

[dependencies]
# Markdown parsing
pulldown-cmark = "0.9"
html5ever = "0.26"
markup5ever_rcdom = "0.2"

# PDF generation
printpdf = "0.7"
tempfile = "3.8"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Node.js bindings
napi = { version = "2.15", features = ["async"] }
napi-derive = "2.15"

[dev-dependencies]
tokio-test = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "basic"
path = "examples/basic.rs"
